# clinical-qa-agent

./: .env.example  .gitignore  README.md  pyproject.toml
data/: generate_synthetic.py
src/clinical_qa/: config.py
src/clinical_qa/agents/: answerer.py  llm.py  planner.py  sql_generator.py  validator.py
src/clinical_qa/api/: main.py
src/clinical_qa/audit/: logger.py
src/clinical_qa/db/: adapter.py  duckdb_adapter.py  snowflake_adapter.py
src/clinical_qa/graph/: orchestrator.py  state.py
src/clinical_qa/guardrails/: sql_safety.py
src/clinical_qa/schema/: __init__.py  phi_columns.yaml  schema.yaml
src/clinical_qa/ui/: app.py
tests/: test_agents.py  test_e2e.py  test_guardrails.py
